# tools/swagger_output.json
@@ -2,10 +2,10 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "DevNexus",
+    "title": "REST API",
     "description": ""
   },
-  "host": "localhost:8080",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
     "http"
@@ -196,7 +196,7 @@
         }
       }
     },
-    "/programming-languages/": {
+    "/programming-languages/add": {
       "post": {
         "description": "",
         "responses": {
@@ -210,7 +210,9 @@
             "description": "Internal Server Error"
           }
         }
-      },
+      }
+    },
+    "/programming-languages/": {
       "get": {
         "description": "",
         "responses": {
@@ -297,7 +299,7 @@
         }
       }
     },
-    "/technologies/": {
+    "/technologies/add": {
       "post": {
         "description": "",
         "responses": {
@@ -305,7 +307,9 @@
             "description": ""
           }
         }
-      },
+      }
+    },
+    "/technologies/": {
       "get": {
         "description": "",
         "responses": {
@@ -388,6 +392,121 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/user/add": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "bio": {
+                  "example": "any"
+                },
+                "selectedLangs": {
+                  "example": "any"
+                },
+                "selectedTechs": {
+                  "example": "any"
+                },
+                "selectedAreas": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                },
+                "deactivated": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/user/{name}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "patch": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
